cilium/network-policies/default-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-secure-app
  namespace: secure-app
spec:
  endpointSelector: {}
